Added more things to the language system

--- a/lang/english.ini
+++ b/lang/english.ini
@@ -1,3 +1,45 @@
+[NOTIF]
+CONNECTED = "@ connected"
+DISCONNECTED = "@ disconnected"
+LEFT_THIS_LEVEL = "@ left this level"
+ENTERED_THIS_LEVEL = "@ entered this level"
+ENTERED = "@ entered\n#"
+SERVER_CLOSED = "\\#ffa0a0\\Disconnected:\\#dcdcdc\\ server closed"
+DISCORD_ERROR = "Discord threw an error.\nTo fix, try: \n1. Close the game.\n2. Restart Discord.\n3. Start the game."
+DISCORD_DETECT = "\\#ffa0a0\\Error:\\#c8c8c8\\ Could not detect Discord.\n\\#a0a0a0\\Try closing the game, restarting Discord, and opening the game again."
+DISCONNECT_FULL = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ The party is full."
+DISCONNECT_KICK = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ The server kicked you."
+DISCONNECT_BAN = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ The server banned you."
+DISCONNECT_REJOIN = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ Rejoining..."
+DISCONNECT_CLOSED = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ Host has closed the connection."
+DISCONNECT_BIG_MOD = "Server had too large of a mod.\nQuitting."
+DIED = "@ died"
+DEBUG_FLY = "@ entered the debug free fly state"
+
+[CHAT]
+KICKING = "Kicking '@'!"
+BANNING = "Banning '@'!"
+SERVER_ONLY = "Only the server can use this command."
+PERM_BANNING = "Permanently banning '@'!"
+ADD_MODERATOR = "Adding '@' as a Moderator!"
+PLAYERS = "Players"
+NO_PERMS = "You do not have permission to use this command."
+PLAYER_NOT_FOUND = "Could not find player."
+SELF_KICK = "You can not kick yourself."
+SELF_BAN = "You can not ban yourself."
+SELF_MOD = "You can not make yourself a moderator."
+KICK_CONFIRM = "Are you sure you want to kick '@'?\nType '\\#a0ffa0\\/confirm\\#fff982\\' to kick."
+BAN_CONFIRM = "Are you sure you want to ban '@'?\nType '\\#a0ffa0\\/confirm\\#fff982\\' to ban."
+PERM_BAN_CONFIRM = "Are you sure you want to permanently ban '@'?\nType '\\#a0ffa0\\/confirm\\#fff982\\' to ban."
+MOD_CONFIRM = "Are you sure you want to make '@' a moderator?\nType '\\#a0ffa0\\/confirm\\#fff982\\'."
+PLAYERS_DESC = "/players - List all players and their IDs"
+KICK_DESC = "/kick [NAME|ID] - Kick this player from the current game"
+BAN_DESC = "/ban [NAME|ID] - Ban this player from the current game"
+PERM_BAN_DESC = "/permban [NAME|ID] - Ban this player from any game you host"
+MOD_DESC = "/moderator [NAME|ID] - Make this player able to use commands like /kick, /ban, /permban on any game you host"
+UNRECOGNIZED = "Unrecognized chat command."
+MOD_GRANTED = "\\#fff982\\You are now a Moderator."
+
 [MENU]
 BACK = "Back"
 CANCEL = "Cancel"
