--- a/lang/spanish.ini
+++ b/lang/spanish.ini
@@ -1,3 +1,45 @@
+[NOTIF]
+CONNECTED = "@ conectado"
+DISCONNECTED = "@ desconectado"
+LEFT_THIS_LEVEL = "@ salió de este nivel"
+ENTERED_THIS_LEVEL = "@ entró en este nivel"
+ENTERED = "@ ingresado\n#"
+SERVER_CLOSED = "\\#ffa0a0\\Desconectado:\\#dcdcdc\\ servidor cerrado"
+DISCORD_ERROR = "Discord lanzó un error.\nPara solucionarlo, intente: \n1. Cierre el juego.\n2. Reinicie Discord.\n3. Inicie el juego".
+DISCORD_DETECT = "\\#ffa0a0\\Error:\\#c8c8c8\\ No se pudo detectar Discord.\n\\#a0a0a0\\Intente cerrar el juego, reiniciar Discord y volver a abrir el juego".
+DISCONNECT_FULL = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ La fiesta está llena."
+DISCONNECT_KICK = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ El servidor te expulsó".
+DISCONNECT_BAN = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ El servidor te prohibió."
+DISCONNECT_REJOIN = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ Reuniéndose..."
+DISCONNECT_CLOSED = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ Host ha cerrado la conexión".
+DISCONNECT_BIG_MOD = "El servidor tenía un mod demasiado grande.\nSaliendo".
+DIED = "@ murió"
+DEBUG_FLY = "@ entró en el estado de vuelo libre de depuración"
+
+[CHAT]
+KICKING = "¡Patadas a '@'!"
+BANNING = "¡Prohibición de '@'!"
+SERVER_ONLY = "Solo el servidor puede usar este comando".
+PERM_BANNING = "¡Prohibición permanente de '@'!"
+ADD_MODERATOR = "¡Añadiendo '@' como moderador!"
+PLAYERS = "Jugadores"
+NO_PERMS = "No tiene permiso para usar este comando".
+PLAYER_NOT_FOUND = "No se pudo encontrar el jugador".
+SELF_KICK = "No puedes patearte a ti mismo".
+SELF_BAN = "No puedes banearte a ti mismo".
+SELF_MOD = "No puedes convertirte en moderador".
+KICK_CONFIRM = "¿Estás seguro de que quieres patear a '@'?\nEscribe '\\#a0ffa0\\/confirm\\#fff982\\' para patear."
+BAN_CONFIRM = "¿Está seguro de que desea prohibir a '@'?\nEscriba '\\#a0ffa0\\/confirm\\#fff982\\' para prohibir".
+PERM_BAN_CONFIRM = "¿Está seguro de que desea prohibir permanentemente a '@'?\nEscriba '\\#a0ffa0\\/confirm\\#fff982\\' para prohibir".
+MOD_CONFIRM = "¿Está seguro de que desea convertir a '@' en moderador?\nEscriba '\\#a0ffa0\\/confirm\\#fff982\\'".
+PLAYERS_DESC = "/players - Lista de todos los jugadores y sus ID"
+KICK_DESC = "/kick [NOMBRE|ID] - Expulsa a este jugador del juego actual"
+BAN_DESC = "/ban [NOMBRE|ID] - Prohibir a este jugador del juego actual"
+PERM_BAN_DESC = "/permban [NOMBRE|ID] - Bloquea a este jugador de cualquier juego que organices"
+MOD_DESC = "/moderator [NOMBRE|ID] - Haz que este jugador pueda usar comandos como /kick, /ban, /permban en cualquier juego que organices"
+UNRECOGNIZED = "Comando de chat no reconocido".
+MOD_GRANTED = "\\#fff982\\Ahora eres moderador".
+
 [MENU]
 BACK = "Atrás"
 CANCEL = "Cancelar"
@@ -97,7 +139,7 @@ HOST = "Anfitrión"
 
 [HOST_MODS]
 ROMHACKS = "ROMHACKS"
-MODS = "MODIFICACIONES"
+MODS = "MODS"
 
 [HOST_SAVE]
 SAVE_TITLE = "AHORRAR"
@@ -177,7 +219,7 @@ MENU_OPTIONS = "Opciones de menú"
 DEBUG = "Depurar"
 
 [MODLIST]
-MODS = "MODIFICACIONES"
+MODS = "MODS"
 
 [OPTIONS]
 OPTIONS = "OPCIONES"
