Make language configurable in-game

--- a/lang/english.ini
+++ b/lang/english.ini
@@ -217,6 +217,7 @@ PAUSE_IN_SINGLEPLAYER = "Pause In Singleplayer"
 DISABLE_POPUPS = "Disable Popups"
 MENU_OPTIONS = "Menu Options"
 DEBUG = "Debug"
+LANGUAGE = "Language"
 
 [MODLIST]
 MODS = "MODS"
@@ -312,3 +313,6 @@ MASTER_VOLUME = "Master Volume"
 MUSIC_VOLUME = "Music Volume"
 SFX_VOLUME = "Sfx Volume"
 ENV_VOLUME = "Env Volume"
+
+[LANGUAGE]
+LANGUAGE = "LANGUAGE"
