--- a/lang/spanish.ini
+++ b/lang/spanish.ini
@@ -217,6 +217,7 @@ PAUSE_IN_SINGLEPLAYER = "Pausar en un jugador"
 DISABLE_POPUPS = "Desactivar ventanas emergentes"
 MENU_OPTIONS = "Opciones de menú"
 DEBUG = "Depurar"
+LANGUAGE = "Idioma"
 
 [MODLIST]
 MODS = "MODS"
@@ -312,3 +313,6 @@ MASTER_VOLUME = "Volumen principal"
 MUSIC_VOLUME = "Volumen de la música"
 SFX_VOLUME = "Volumen SFX"
 ENV_VOLUME = "Volumen envolvente"
+
+[LANGUAGE]
+LANGUAGE = "IDIOMA"
