Update spanish translation (translated by eros71)

--- a/lang/spanish.ini
+++ b/lang/spanish.ini
@@ -1,222 +1,222 @@
 [NOTIF]
-CONNECTED = "@ conectado"
-DISCONNECTED = "@ desconectado"
-LEFT_THIS_LEVEL = "@ salió de este nivel"
-ENTERED_THIS_LEVEL = "@ entró en este nivel"
-ENTERED = "@ ingresado\n#"
+CONNECTED = "@ se ha conectado"
+DISCONNECTED = "@ se ha desconectado"
+LEFT_THIS_LEVEL = "@ ha salido del nivel"
+ENTERED_THIS_LEVEL = "@ ha entrado al nivel"
+ENTERED = "@ se ha unido\n#"
 SERVER_CLOSED = "\\#ffa0a0\\Desconectado:\\#dcdcdc\\ servidor cerrado"
-DISCORD_ERROR = "Discord lanzó un error.\nPara solucionarlo, intente: \n1. Cierre el juego.\n2. Reinicie Discord.\n3. Inicie el juego".
-DISCORD_DETECT = "\\#ffa0a0\\Error:\\#c8c8c8\\ No se pudo detectar Discord.\n\\#a0a0a0\\Intente cerrar el juego, reiniciar Discord y volver a abrir el juego".
-DISCONNECT_FULL = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ La fiesta está llena."
-DISCONNECT_KICK = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ El servidor te expulsó".
-DISCONNECT_BAN = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ El servidor te prohibió."
-DISCONNECT_REJOIN = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ Reuniéndose..."
-DISCONNECT_CLOSED = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ Host ha cerrado la conexión".
-DISCONNECT_BIG_MOD = "El servidor tenía un mod demasiado grande.\nSaliendo".
-DIED = "@ murió"
-DEBUG_FLY = "@ entró en el estado de vuelo libre de depuración"
+DISCORD_ERROR = "Discord ha lanzado un error.\nPara solucionarlo, intenta: \n1. Cerrar el juego.\n2. Reiniciar Discord.\n3. Iniciar el juego."
+DISCORD_DETECT = "\\#ffa0a0\\Error:\\#c8c8c8\\ No se ha podido detectar Discord.\n\\#a0a0a0\\Prueba a cerrar el juego, reiniciar Discord, e iniciar el juego otra vez."
+DISCONNECT_FULL = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ La partida está llena."
+DISCONNECT_KICK = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ Has sido expulsado del servidor."
+DISCONNECT_BAN = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ Has sido vetado del servidor."
+DISCONNECT_REJOIN = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ Uniendose de nuevo..."
+DISCONNECT_CLOSED = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ El anfitrión ha cerrado la conexion."
+DISCONNECT_BIG_MOD = "El servidor tenía un mod demasiado pesado.\nSaliendo."
+DIED = "@ ha muerto"
+DEBUG_FLY = "@ está en estado de vuelo libre debug"
 
 [CHAT]
-KICKING = "¡Patadas a '@'!"
-BANNING = "¡Prohibición de '@'!"
-SERVER_ONLY = "Solo el servidor puede usar este comando".
-PERM_BANNING = "¡Prohibición permanente de '@'!"
-ADD_MODERATOR = "¡Añadiendo '@' como moderador!"
+KICKING = "¡Expulsando a '@'!"
+BANNING = "¡Vetando a '@'!"
+SERVER_ONLY = "Solo el servidor puede usar este comando."
+PERM_BANNING = "¡Vetando permanentemente a '@'!"
+ADD_MODERATOR = "¡Añadiendo a '@' como Moderador!"
 PLAYERS = "Jugadores"
-NO_PERMS = "No tiene permiso para usar este comando".
-PLAYER_NOT_FOUND = "No se pudo encontrar el jugador".
-SELF_KICK = "No puedes patearte a ti mismo".
-SELF_BAN = "No puedes banearte a ti mismo".
-SELF_MOD = "No puedes convertirte en moderador".
-KICK_CONFIRM = "¿Estás seguro de que quieres patear a '@'?\nEscribe '\\#a0ffa0\\/confirm\\#fff982\\' para patear."
-BAN_CONFIRM = "¿Está seguro de que desea prohibir a '@'?\nEscriba '\\#a0ffa0\\/confirm\\#fff982\\' para prohibir".
-PERM_BAN_CONFIRM = "¿Está seguro de que desea prohibir permanentemente a '@'?\nEscriba '\\#a0ffa0\\/confirm\\#fff982\\' para prohibir".
-MOD_CONFIRM = "¿Está seguro de que desea convertir a '@' en moderador?\nEscriba '\\#a0ffa0\\/confirm\\#fff982\\'".
-PLAYERS_DESC = "/players - Lista de todos los jugadores y sus ID"
-KICK_DESC = "/kick [NOMBRE|ID] - Expulsa a este jugador del juego actual"
-BAN_DESC = "/ban [NOMBRE|ID] - Prohibir a este jugador del juego actual"
-PERM_BAN_DESC = "/permban [NOMBRE|ID] - Bloquea a este jugador de cualquier juego que organices"
-MOD_DESC = "/moderator [NOMBRE|ID] - Haz que este jugador pueda usar comandos como /kick, /ban, /permban en cualquier juego que organices"
-UNRECOGNIZED = "Comando de chat no reconocido".
-MOD_GRANTED = "\\#fff982\\Ahora eres moderador".
+NO_PERMS = "No tienes permiso para usar este comando."
+PLAYER_NOT_FOUND = "No se ha podido encontrar al jugador."
+SELF_KICK = "No te puedes expulsar a tí mismo."
+SELF_BAN = "No te puedes vetar a tí mismo."
+SELF_MOD = "No te puedes hacerte moderador a tí mismo."
+KICK_CONFIRM = "¿Seguro que quieres expulsar a '@'?\nEscribe '\\#a0ffa0\\/confirm\\#fff982\\' para expusar."
+BAN_CONFIRM = "¿Seguro que quieres vetar a '@'?\nEscribe '\\#a0ffa0\\/confirm\\#fff982\\' para vetar."
+PERM_BAN_CONFIRM = "¿Seguro que quieres vetar permanentemente a '@'?\nEscribe '\\#a0ffa0\\/confirm\\#fff982\\' para vetar."
+MOD_CONFIRM = "¿Seguro que quieres convertir a '@' en moderador?\Escribe '\\#a0ffa0\\/confirm\\#fff982\\'."
+PLAYERS_DESC = "/players - Mostrar lista de todos los jugadores y sus IDs"
+KICK_DESC = "/kick [NAME|ID] - Expulsar al jugador de la partida actual"
+BAN_DESC = "/ban [NAME|ID] - Vetar al jugador de la partida actual"
+PERM_BAN_DESC = "/permban [NAME|ID] - Vetar al jugador de todas tus partidas"
+MOD_DESC = "/moderator [NAME|ID] - Permitir a este jugador usar comandos como /kick, /ban o /permban de cualquier juego que alojes"
+UNRECOGNIZED = "Comando de chat desconocido."
+MOD_GRANTED = "\\#fff982\\Ahora eres un Moderador."
 
 [MENU]
-BACK = "Atrás"
+BACK = "Volver"
 CANCEL = "Cancelar"
 NO = "No"
 YES = "Sí"
 
 [CAMERA]
 CAMERA = "CÁMARA"
-FREE_CAMERA = "Cámara libre"
-ANALOG_CAMERA = "Camara analogica"
-MOUSE_LOOK = "Mirada del ratón"
-INVERT_X = "Invertir X"
-INVERT_Y = "Invertir Y"
-X_SENSITIVITY = "Sensibilidad X"
-Y_SENSITIVITY = "Sensibilidad Y"
-AGGRESSION = "Agresión"
-PAN_LEVEL = "Nivel panorámico"
-DECELERATION = "Desaceleración"
+FREE_CAMERA = "Cámara Libre"
+ANALOG_CAMERA = "Cámara Analógica"
+MOUSE_LOOK = "Moviemiento con Ratón"
+INVERT_X = "Invertir eje X"
+INVERT_Y = "Invertir eje Y"
+X_SENSITIVITY = "Sensibilidad Eje X"
+Y_SENSITIVITY = "Sensibilidad Eje Y"
+AGGRESSION = "Agresíon"
+PAN_LEVEL = "Nivel Seguimiento"
+DECELERATION = "Deceleración"
 
 [CHEATS]
-CHEATS = "TRAMPAS"
-MOON_JUMP = "Salto de Luna"
-GOD_MODE = "Modo de Dios"
-INFINITE_LIVES = "Vidas infinitas"
-SUPER_SPEED = "Super velocidad"
-RESPONSIVE_CONTROLS = "Controles responsivos"
-RAPID_FIRE = "Fuego rápido (A)"
-BLJ_ANYWHERE = "BLJ en cualquier lugar"
-ALWAYS_TRIPLE_JUMP = "Siempre triple salto"
+CHEATS = "TRUCOS"
+MOON_JUMP = "Salto Lunar"
+GOD_MODE = "Modo Dios"
+INFINITE_LIVES = "Vidas Ilimitadas"
+SUPER_SPEED = "Super Velocidad"
+RESPONSIVE_CONTROLS = "Controles Responsivos"
+RAPID_FIRE = "Pulsación Rápida (A)"
+BLJ_ANYWHERE = "BLJ en cualquier parte"
+ALWAYS_TRIPLE_JUMP = "Siempre hacer Triple Salto"
 
 [CONTROLS]
-CONTROLS = "CONTROLS"
+CONTROLS = "CONTROLES"
 
-N64_BINDS = "N64 se une"
-EXTRA_BINDS = "Lazos adicionales"
-BACKGROUND_GAMEPAD = "Gamepad en segundo plano (debe reiniciarse)"
-GAMEPAD = "Control de juegos"
+N64_BINDS = "Asignaciones N64"
+EXTRA_BINDS = "Asignaciones Extra"
+BACKGROUND_GAMEPAD = "Mando en segundo plano (requiere reiniciar)"
+GAMEPAD = "Mando"
 DEADZONE = "Zona muerta"
-RUMBLE_STRENGTH = "Fuerza de estruendo"
+RUMBLE_STRENGTH = "Fuerza de Vibración"
 
-CHAT = "Charlar"
+CHAT = "Chat"
 PLAYERS = "Jugadores"
-D_UP = "D arriba"
-D_DOWN = "D abajo"
-D_LEFT = "D Izquierda"
-D_RIGHT = "D Derecha"
+D_UP = "Cruzeta Arriba"
+D_DOWN = "Cruzeta Abajo"
+D_LEFT = "Cruzeta Izquierda"
+D_RIGHT = "Cruzeta Derecha"
 X = "X"
 Y = "Y"
 
 UP = "Arriba"
 DOWN = "Abajo"
 LEFT = "Izquierda"
-RIGHT = "Bien"
+RIGHT = "Derecha"
 A = "A"
 B = "B"
-START = "Comenzar"
+START = "Start"
 L = "L"
 R = "R"
 Z = "Z"
-C_UP = "Taza"
-C_DOWN = "C abajo"
+C_UP = "C Arriba"
+C_DOWN = "C Abajo"
 C_LEFT = "C Izquierda"
 C_RIGHT = "C Derecha"
 
 [DISPLAY]
-DISPLAY = "MOSTRAR"
+DISPLAY = "PANTALLA"
 FULLSCREEN = "Pantalla completa"
-PRELOAD_TEXTURES = "Precargar texturas"
-VSYNC = "VSync"
-UNCAPPED_FRAMERATE = "Frecuencia de fotogramas sin límite"
-FRAME_LIMIT = "Límite de fotogramas"
+PRELOAD_TEXTURES = "Precargar Texturas"
+VSYNC = "Sincronización Vertical"
+UNCAPPED_FRAMERATE = "FPS sin límite"
+FRAME_LIMIT = "Límite de FPS"
 FAST = "Rápido"
 ACCURATE = "Preciso"
 INTERPOLATION = "Interpolación"
 NEAREST = "Más cercano"
 LINEAR = "Lineal"
-TRIPOINT = "Tripunto"
-FILTERING = "Filtración"
+TRIPOINT = "Tri-punto"
+FILTERING = "Filtrado"
 D0P5X = "0.5x"
 D1X = "1x"
 D1P5X = "1.5x"
 D3X = "3x"
 D10X = "10x"
 D100X = "100x"
-DRAW_DISTANCE = "Dibujar distancia"
-DYNOS_PACKS = "Paquetes DynOS"
+DRAW_DISTANCE = "Distancia de Dibujado"
+DYNOS_PACKS = "Packs DynOS"
 
 [DYNOS]
 DYNOS = "DYNOS"
 
 [HOST_MESSAGE]
-INFO_TITLE = "INFORMACION"
-WARN_DISCORD = "Invita a amigos haciendo clic derecho en su nombre en Discord y haciendo clic en\n'\\#d0d0ff\\Invitar al juego\\#c8c8c8\\'.\n\nTambién puedes invitar a canales de servidores haciendo clic en \\# d0d0ff\\más\\#c8c8c8\\ al lado del lugar donde ingresas al chat.\n\nActividad del juego \\#ffa0a0\\debe estar\\#c8c8c8\\ habilitado en tu\nconfiguración de usuario de Discord.\n\ nAparecer sin conexión \\#ffa0a0\\evitará\\#c8c8c8\\ que se envíen invitaciones".
-WARN_DISCORD2 = "\\#ffa0a0\\Error:\\#c8c8c8\\ No se pudo detectar Discord.\n\n\\#a0a0a0\\Intenta cerrar el juego,\nreiniciar Discord\ny abrir el juego nuevamente".
-WARN_SOCKET = "Las conexiones directas \\#ffa0a0\\requieren que\\#c8c8c8\\ configure el reenvío de puertos en su enrutador.\n\nReenvíe el puerto '\\#d0d0ff\\%d\\#c8c8c8\\' para UDP".
-HOST = "Anfitrión"
+INFO_TITLE = "INFO"
+WARN_DISCORD = "Invita a amigos haciendo click derecho en su nombre en Discord y seleccionando\n'\\#d0d0ff\\Invitar a unirse\\#c8c8c8\\'.\n\nPuedes invitar en canales de un servidor también presionando el\nbotón \\#d0d0ff\\+\\#c8c8c8\\ al lado del cuadro de texto del chat.\n\nEl estado de Actividad Actual \\#ffa0a0\\debe estar\\#c8c8c8\\ activado en tus \najustes de Discord.\n\nEstár invisible \\#ffa0a0\\te prevendrá\\#c8c8c8\\ de crear invitaciones."
+WARN_DISCORD2 = "\\#ffa0a0\\Error:\\#c8c8c8\\ No se ha detectado a Discord.\n\n\\#a0a0a0\\Prueba a cerrar el juego,\nreiniciar Discord,\ny abrir el juego de nuevo."
+WARN_SOCKET = "Las conexiones directas \\#ffa0a0\\requieren\\#c8c8c8\\ que abras los puertos en tu rúter.\n\nAbre el puerto '\\#d0d0ff\\%d\\#c8c8c8\\' en UDP."
+HOST = "Alojar"
 
 [HOST_MODS]
 ROMHACKS = "ROMHACKS"
 MODS = "MODS"
 
 [HOST_SAVE]
-SAVE_TITLE = "AHORRAR"
+SAVE_TITLE = "GUARDAR"
 ERASE_TITLE = "BORRAR"
-CONFIRM = "¿Estás seguro de que quieres borrar este espacio de guardado?"
-ERASE = "borrar"
+CONFIRM = "¿Seguro que quieres borrar esta partida?"
+ERASE = "Borrar"
 
 [HOST_SETTINGS]
 SETTINGS = "AJUSTES"
-NONSOLID = "No sólido"
-SOLID = "Sólido"
-FRIENDLY_FIRE = "Fuego amigo"
-PLAYER_INTERACTION = "Interacción del jugador"
+NONSOLID = "Intangible"
+SOLID = "Tangible"
+FRIENDLY_FIRE = "Fuego Amigo"
+PLAYER_INTERACTION = "Interacción entre jugadores"
 WEAK = "Débil"
 NORMAL = "Normal"
 TOO_MUCH = "Demasiado"
 KNOCKBACK_STRENGTH = "Fuerza de retroceso"
-LEAVE_LEVEL = "Dejar nivel"
-STAY_IN_LEVEL = "Mantente en el nivel"
-NONSTOP = "Sin escalas"
-ON_STAR_COLLECTION = "Colección de estrellas"
-SKIP_INTRO_CUTSCENE = "Saltar escena de introducción"
+LEAVE_LEVEL = "Salir del nivel"
+STAY_IN_LEVEL = "Seguir en el nivel"
+NONSTOP = "Siguiente misión"
+ON_STAR_COLLECTION = "Al conseguir una estrella"
+SKIP_INTRO_CUTSCENE = "Saltar cinemática de introducción"
 SHARE_LIVES = "Compartir vidas"
 ENABLE_CHEATS = "Habilitar trucos"
-BUBBLE_ON_DEATH = "Burbuja sobre la muerte"
-AMOUNT_OF_PLAYERS = "Cantidad de jugadores"
+BUBBLE_ON_DEATH = "Burbuja al morir"
+AMOUNT_OF_PLAYERS = "Número de jugadores"
 
 [HOST]
 SERVER_TITLE = "SERVIDOR"
-HOST_TITLE = "ANFITRIÓN"
+HOST_TITLE = "ALOJAR"
 DISCORD = "Discord"
-DIRECT_CONNECTION = "Conexión directa"
-NETWORK_SYSTEM = "Sistema de redes"
+DIRECT_CONNECTION = "Conexión Directa"
+NETWORK_SYSTEM = "Modo de conexión"
 PORT = "Puerto"
-SAVE_SLOT = "Guardar ranura"
+SAVE_SLOT = "Ranura Guardado"
 SETTINGS = "Ajustes"
 MODS = "Mods"
 ROMHACKS = "Rom-Hacks"
 APPLY = "Aplicar"
-HOST = "Anfitrión"
+HOST = "Alojar"
 
 [JOIN_MESSAGE]
-JOINING = "UNIÓN"
+JOINING = "UNIENDOSE"
 
 [JOIN]
 JOIN_TITLE = "UNIRSE"
-JOIN_DISCORD = "Para unirse a una sala de \\#d0d0ff\\Discord\\#c8c8c8\\:\n\nMantenga el juego abierto y haga clic en el botón para unirse en la invitación.\n\nSi la invitación dice que el juego ha terminado, haga clic en el nombre de la persona que envió la invitación para actualizarla".
-JOIN_SOCKET = "Ingrese \\#d0d0ff\\conexión directa\\#c8c8c8\\ IP y puerto:"
+JOIN_DISCORD = "Para unirte a un lobby en \\#d0d0ff\\Discord\\#c8c8c8\\:\n\nManten el juego abierto y acepta la invitación.\n\nSi la invitación dice que la partida ha terminado, haz click en el nombre de la persona que te invitó para refrescarla."
+JOIN_SOCKET = "Introduce la IP y el puerto de \\#d0d0ff\\conexión directa\\#c8c8c8\\:"
 JOIN = "Unirse"
 
 [MAIN]
-QUIT_TITLE = "ABANDONAR"
+QUIT_TITLE = "SALIR"
 QUIT_CONFIRM = "¿Seguro que quieres salir?"
-HOST = "Anfitrión"
+HOST = "Alojar"
 JOIN = "Unirse"
 OPTIONS = "Opciones"
-QUIT = "Abandonar"
+QUIT = "Salir"
 
 [MENU_OPTIONS]
 MAIN_MENU = "MENÚ PRINCIPAL"
 LEVEL = "Nivel"
-USE_STAGE_MUSIC = "Usar música de escenario"
-RANDOM_STAGE = "Etapa aleatoria"
-PLAY_VANILLA_DEMOS = "Reproducir demostraciones de vainilla"
+USE_STAGE_MUSIC = "Usar Música del Nivel"
+RANDOM_STAGE = "Nivel Aleatório"
+PLAY_VANILLA_DEMOS = "Reproducir Demostraciones Vanilla"
 
 [MISC]
-DEBUG_TITLE = "DEPURAR"
-FIXED_COLLISIONS = "Colisiones fijas"
+DEBUG_TITLE = "DEPURACIÓN"
+FIXED_COLLISIONS = "Colisiones Arregladas"
 LUA_PROFILER = "Perfilador de Lua"
-DEBUG_PRINT = "Impresión de depuración"
-DEBUG_INFO = "Información de depuración"
-DEBUG_ERRORS = "Errores de depuración"
-MISC_TITLE = "VARIOS"
-PAUSE_IN_SINGLEPLAYER = "Pausar en un jugador"
-DISABLE_POPUPS = "Desactivar ventanas emergentes"
-MENU_OPTIONS = "Opciones de menú"
-DEBUG = "Depurar"
+DEBUG_PRINT = "Mensajes de Depuración"
+DEBUG_INFO = "Información de Depuración"
+DEBUG_ERRORS = "Errores de Depuración"
+MISC_TITLE = "MISCELÁNEO"
+PAUSE_IN_SINGLEPLAYER = "Pausa en Modo de Un jugador"
+DISABLE_POPUPS = "Deshabilitar Mensajes Emergentes"
+MENU_OPTIONS = "Opciones del Menú"
+DEBUG = "Depuración"
 LANGUAGE = "Idioma"
 
 [MODLIST]
@@ -226,45 +226,45 @@ MODS = "MODS"
 OPTIONS = "OPCIONES"
 PLAYER = "Jugador"
 CAMERA = "Cámara"
-CONTROLS = "Controls"
-DISPLAY = "Mostrar"
+CONTROLS = "Controles"
+DISPLAY = "Pantalla"
 SOUND = "Sonido"
-MISC = "Miscelánea"
+MISC = "Misceláneo"
 
 [PAUSE]
-QUIT_TITLE = "ABANDONAR"
-QUIT_HOST = "¿Estás seguro de que quieres dejar de hospedar?"
-QUIT_CLIENT = "¿Estás seguro de que quieres desconectarte?"
+QUIT_TITLE = "SALIR"
+QUIT_HOST = "¿Seguro que quieres dejar de alojar?"
+QUIT_CLIENT = "¿Seguro que te quieres desconectar?"
 PAUSE_TITLE = "PAUSA"
 PLAYER = "Jugador"
-DYNOS_PACKS = "Paquetes DynOS"
+DYNOS_PACKS = "Packs DynOS"
 OPTIONS = "Opciones"
 CHEATS = "Trucos"
-SERVER_SETTINGS = "Configuración del servidor"
-RESUME = "Reanudar"
-STOP_HOSTING = "Dejar de hospedar"
-DISCONNECT = "Desconectar"
+SERVER_SETTINGS = "Ajustes del Servidor"
+RESUME = "Continuar"
+STOP_HOSTING = "Dejar de Alojar"
+DISCONNECT = "Desconectarse"
 
 [PLAYER]
 PLAYER_TITLE = "JUGADOR"
-OVERALLS = "Mono"
+OVERALLS = "Tirantes"
 SHIRT = "Camisa"
 GLOVES = "Guantes"
 SHOES = "Zapatos"
-HAIR = "Cabello"
+HAIR = "Pelo"
 SKIN = "Piel"
 CAP = "Gorra"
 PALETTE = "PALETA"
 PART = "Parte"
-HEX_CODE = "Código hexadecimal"
+HEX_CODE = "Código Hex"
 RED = "Rojo"
 GREEN = "Verde"
 BLUE = "Azul"
 PLAYER = "Jugador"
 NAME = "Nombre"
 MODEL = "Modelo"
-PALETTE_PRESET = "Preajuste de paleta"
-EDIT_PALETTE = "Editar paleta"
+PALETTE_PRESET = "Perfil de Paleta"
+EDIT_PALETTE = "Editar Paleta"
 
 [PALETTE]
 MARIO = "Mario"
@@ -276,43 +276,43 @@ GOOMBA = "Goomba"
 CLOVER = "Trébol"
 COBALT = "Cobalto"
 FURY = "Furia"
-HOT_PINK = "Rosa caliente"
-NICE_PINK = "Bonito rosa"
-SEAFOAM = "Espuma de mar"
+HOT_PINK = "Rosa Intenso"
+NICE_PINK = "Rosa Agradable"
+SEAFOAM = "Espuma Marina"
 LILAC = "Lila"
 COPPER = "Cobre"
-AZURE = "Azur"
+AZURE = "Celeste"
 BURGUNDY = "Borgoña"
 MINT = "Menta"
 EGGPLANT = "Berenjena"
 ORANGE = "Naranja"
 ARCTIC = "Ártico"
-FIRE_MARIO = "Fuego Mario"
-FIRE_LUIGI = "Fuego Luigi"
-FIRE_WALUIGI = "Fuego Waluigi"
-FIRE_WARIO = "Fuego Wario"
-BUSY_BEE = "Abeja ocupada"
+FIRE_MARIO = "Mario de Fuego"
+FIRE_LUIGI = "Luigi de Fuego"
+FIRE_WALUIGI = "Waluigi de Fuego"
+FIRE_WARIO = "Wario de Fuego"
+BUSY_BEE = "Abeja Ocupada"
 FORTRESS = "Fortaleza"
-BATTLEMENTS = "Almenas"
-BLUEBERRY_PIE = "Pastel de arandanos"
+BATTLEMENTS = "Acorazado"
+BLUEBERRY_PIE = "Tarta de Arándanos"
 RASPBERRY = "Frambuesa"
 BUBBLEGUM = "Chicle"
-ICE_MARIO = "Mario de hielo"
-ICE_LUIGI = "Luigi de hielo"
-CUSTOM = "Costumbre"
+ICE_MARIO = "Mario de Hielo"
+ICE_LUIGI = "Luigi de Hielo"
+CUSTOM = "Personalizado"
 
 [PLAYER_LIST]
 PLAYERS = "JUGADORES"
 NAME = "nombre"
-LOCATION = "ubicación"
-ACT = "acto"
+LOCATION = "localización"
+ACT = "recorrido"
 
 [SOUND]
 SOUND = "SONIDO"
-MASTER_VOLUME = "Volumen principal"
-MUSIC_VOLUME = "Volumen de la música"
-SFX_VOLUME = "Volumen SFX"
-ENV_VOLUME = "Volumen envolvente"
+MASTER_VOLUME = "Volumen Maestro"
+MUSIC_VOLUME = "Volumen Música"
+SFX_VOLUME = "Volumen Efectos de Sonido"
+ENV_VOLUME = "Volumen Entorno"
 
 [LANGUAGE]
 LANGUAGE = "IDIOMA"
