Shorten spanish d-pad labels

--- a/lang/spanish.ini
+++ b/lang/spanish.ini
@@ -82,10 +82,10 @@ RUMBLE_STRENGTH = "Fuerza de Vibración"
 
 CHAT = "Chat"
 PLAYERS = "Jugadores"
-D_UP = "Cruzeta Arriba"
-D_DOWN = "Cruzeta Abajo"
-D_LEFT = "Cruzeta Izquierda"
-D_RIGHT = "Cruzeta Derecha"
+D_UP = "D Arriba"
+D_DOWN = "D Abajo"
+D_LEFT = "D Izquierda"
+D_RIGHT = "D Derecha"
 X = "X"
 Y = "Y"
 
