Remove text that says background gamepad requires a restart

--- a/lang/english.ini
+++ b/lang/english.ini
@@ -75,7 +75,7 @@ CONTROLS = "CONTROLS"
 
 N64_BINDS = "N64 Binds"
 EXTRA_BINDS = "Extra Binds"
-BACKGROUND_GAMEPAD = "Background Gamepad (must restart)"
+BACKGROUND_GAMEPAD = "Background Gamepad"
 GAMEPAD = "Gamepad"
 DEADZONE = "Deadzone"
 RUMBLE_STRENGTH = "Rumble Strength"
