--- a/lang/french.ini
+++ b/lang/french.ini
@@ -75,7 +75,7 @@ CONTROLS = "CONTRÔLES"
 
 N64_BINDS = "Touches N64"
 EXTRA_BINDS = "Touches Supplémentaires"
-BACKGROUND_GAMEPAD = "Manette en arrière plan (nécessite redémarrage)"
+BACKGROUND_GAMEPAD = "Manette en arrière plan"
 GAMEPAD = "Manette"
 DEADZONE = "Zone Morte"
 RUMBLE_STRENGTH = "Vibrations"
