--- a/lang/spanish.ini
+++ b/lang/spanish.ini
@@ -75,7 +75,7 @@ CONTROLS = "CONTROLES"
 
 N64_BINDS = "Asignaciones N64"
 EXTRA_BINDS = "Asignaciones Extra"
-BACKGROUND_GAMEPAD = "Mando en segundo plano (requiere reiniciar)"
+BACKGROUND_GAMEPAD = "Mando en segundo plano"
 GAMEPAD = "Mando"
 DEADZONE = "Zona muerta"
 RUMBLE_STRENGTH = "Fuerza de Vibración"
