Updated french language file (thanks Skeltan)

--- a/lang/French.ini
+++ b/lang/French.ini
@@ -21,7 +21,7 @@ KICKING = "Vous avez expulsé '@'!"
 BANNING = "Vous avez banni '@'!"
 SERVER_ONLY = "Seul le serveur peut exécuter cette commande."
 PERM_BANNING = "Vous avez banni définitevement '@'!"
-ADD_MODERATOR = "Vous avez ajouter '@' en tant que modérateur!"
+ADD_MODERATOR = "Vous avez ajouté '@' en tant que modérateur!"
 PLAYERS = "Joueurs"
 NO_PERMS = "Vous n'avez pas la permission d'utiliser cette commande."
 PLAYER_NOT_FOUND = "N'a pas pu trouver le joueur."
@@ -34,8 +34,8 @@ PERM_BAN_CONFIRM = "Êtes-vous sûr de vouloir bannir définitivement '@'?\nTape
 MOD_CONFIRM = "Êtes-vous sûr de vouloir faire de '@' un modérateur?\nTapez '\\#a0ffa0\\/confirm\\#fff982\\'."
 PLAYERS_DESC = "/players - Liste tous les joueurs et leurs ID"
 KICK_DESC = "/kick [NAME|ID] - Expulse ce joueur de la partie actuelle"
-BAN_DESC = "/ban [NAME|ID] - Banni ce joueur de la partie actuelle"
-PERM_BAN_DESC = "/permban [NAME|ID] - Banni ce joueur de n'importe quelle partie que vous hébergerez"
+BAN_DESC = "/ban [NAME|ID] - Bannit ce joueur de la partie actuelle"
+PERM_BAN_DESC = "/permban [NAME|ID] - Bannit ce joueur de n'importe quelle partie que vous hébergerez"
 MOD_DESC = "/moderator [NAME|ID] - Rend ce joueur capable d'exécuter des commandes tel que /kick, /ban, /permban sur n'importe quelle partie que vous hébergerez"
 UNRECOGNIZED = "Cette commande n'est pas reconnue."
 MOD_GRANTED = "\\#fff982\\Vous êtes désormais un modérateur."
@@ -57,7 +57,7 @@ X_SENSITIVITY = "Sensibilité en X"
 Y_SENSITIVITY = "Sensibilité en Y"
 AGGRESSION = "Aggression"
 PAN_LEVEL = "Niveau de centrage"
-DECELERATION = "Décéleration"
+DECELERATION = "Décélération"
 
 [CHEATS]
 CHEATS = "CODES TRICHES"
@@ -132,9 +132,9 @@ DYNOS = "DYNOS"
 
 [HOST_MESSAGE]
 INFO_TITLE = "INFORMATIONS"
-WARN_DISCORD = "Invite des amis en faisant un clic droit sur leur pseudo Discord puis en cliquant sur '\\#d0d0ff\\Inviter à rejoindre\\#c8c8c8\\'.\n\nVous pouvez envoyer des invitations dans des chats de serveurs en cliquant\nsur le bouton \\#d0d0ff\\+\\#c8c8c8\\ à coté de la barre de chat.\n\nLe statut d'activité \\#ffa0a0\\doit-être\\#c8c8c8\\ activé dans les paramètres\nutilisateurs Discord.\n\nApparaître hors-ligne \\#ffa0a0\\empêchera\\#c8c8c8\\ les invitations d'être envoyées."
+WARN_DISCORD = "Invitez des amis en faisant un clic droit sur \nleur pseudo Discord puis en cliquant sur \n'\\#d0d0ff\\Inviter à rejoindre\\#c8c8c8\\'.\n\nVous pouvez envoyer des invitations dans les chats de serveurs en cliquant\nsur le bouton \\#d0d0ff\\+\\#c8c8c8\\ à coté de la barre de chat.\n\nLe statut d'activité \\#ffa0a0\\doit-être\\#c8c8c8\\ activé dans les paramètres utilisateurs Discord.\n\nApparaître hors-ligne \\#ffa0a0\\empêchera\\#c8c8c8\\ les invitations\nd'être envoyées."
 WARN_DISCORD2 = "\\#ffa0a0\\Erreur:\\#c8c8c8\\ Discord n'est pas détecté.\n\n\\#a0a0a0\\Essayez de fermer le jeu,\nrelancer Discord,\net relancer le jeu."
-WARN_SOCKET = "La Connexion Directe \\#ffa0a0\\vous oblige\\#c8c8c8\\à configurer un port dans votre routeur.\n\nDéfinis le port sur '\\#d0d0ff\\%d\\#c8c8c8\\' pour UDP."
+WARN_SOCKET = "La Connexion Directe \\#ffa0a0\\vous oblige\\#c8c8c8\\ à configurer un\nport dans votre routeur.\n\nDéfinissez le port sur '\\#d0d0ff\\%d\\#c8c8c8\\' pour l'UDP."
 HOST = "Héberger"
 
 [HOST_MODS]
@@ -151,7 +151,7 @@ ERASE = "effacer"
 SETTINGS = "PARAMÈTRES"
 NONSOLID = "Non solide"
 SOLID = "Solide"
-FRIENDLY_FIRE = "Dégats alliés"
+FRIENDLY_FIRE = "Dégâts alliés"
 PLAYER_INTERACTION = "Interactions joueurs"
 WEAK = "Faible"
 NORMAL = "Normal"
@@ -163,7 +163,7 @@ NONSTOP = "Non-stop"
 ON_STAR_COLLECTION = "Obtention d'étoile"
 SKIP_INTRO_CUTSCENE = "Passer la cinématique d'intro"
 SHARE_LIVES = "Partage de vies"
-ENABLE_CHEATS = "Activer les cheats"
+ENABLE_CHEATS = "Activer le mode triche"
 BUBBLE_ON_DEATH = "Bulles (mort)"
 AMOUNT_OF_PLAYERS = "Nombre de joueurs"
 
@@ -186,7 +186,7 @@ JOINING = "CONNEXION"
 
 [JOIN]
 JOIN_TITLE = "REJOINDRE"
-JOIN_DISCORD = "Pour rejoindre une partie \\#d0d0ff\\Discord\\#c8c8c8\\:\n\nLaissez le jeu ouvert et cliquez sur rejoindre sur l'invitation.\n\nSi l'invitation dit que la partie est terminée, cliquez sur le nom de la personne qui a envoyé l'invitation pour\nl'actualiser."
+JOIN_DISCORD = "Pour rejoindre une partie \\#d0d0ff\\Discord\\#c8c8c8\\:\n\nLaissez le jeu ouvert et cliquez sur rejoindre sur l'invitation.\n\nSi l'invitation dit que la partie est terminée, cliquez sur le nom de la personne qui a envoyé l'invitation pour l'actualiser."
 JOIN_SOCKET = "Entrez l'IP et le port de la\n\\#d0d0ff\\connexion directe\\#c8c8c8\\ :"
 JOIN = "Rejoindre"
 
@@ -277,7 +277,7 @@ CLOVER = "Trèfle"
 COBALT = "Cobalt"
 FURY = "Fureur"
 HOT_PINK = "Rose Chaud"
-NICE_PINK = "Bon Rose"
+NICE_PINK = "Rose Bonbon"
 SEAFOAM = "Écume"
 LILAC = "Lilas"
 COPPER = "Cuivre"
@@ -312,8 +312,7 @@ SOUND = "AUDIO"
 MASTER_VOLUME = "Volume Principal"
 MUSIC_VOLUME = "Volume de la Musique"
 SFX_VOLUME = "Volume des effets sonores"
-ENV_VOLUME = "Volume de l'envirronement"
+ENV_VOLUME = "Volume de l'environnement"
 
 [LANGUAGE]
 LANGUAGE = "LANGUE"
-
